2008-07-23  Alp Toker  <alp@nuanti.com>

        Build fix after r35293: Add API/ to the include path.

        * GNUmakefile.am:

2008-07-23  Adam Roben  <aroben@apple.com>

        Windows build fixes

        Build fix after r35293:

        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.vcproj: Add API/
        to the include path.

        Build fix after r35305:

        * VM/Machine.cpp:
        * VM/Machine.h:
        * VM/Opcode.cpp:
        * VM/Opcode.h:
        Completely compile out all sampler-related code when
        SAMPLING_TOOL_ENABLED is 0. The sampler code can't be compiled 1) on
        non-AllInOne configurations due to circular header dependencies, and
        2) on platforms that don't have a usleep() function, such as Windows.

2008-07-23  Oliver Hunt  <oliver@apple.com>

        Reviewed by Geoff Garen and Sam Weinig.

        Improve switch performance.

        Improve switch performance by converting to a hashmap based jump
        table to avoid the sequence of dispatches that would otherwise be
        needed.  This results in a 9-19x performance win for string switches
        based on ad hoc testing, and a 6x improvement for integer switch
        statements.  SunSpider reports a 1.2% progression.

        * VM/CodeBlock.cpp:
        (KJS::CodeBlock::dump):
        (KJS::SimpleJumpTable::offsetForValue):
        * VM/CodeBlock.h:
        * VM/CodeGenerator.cpp:
        (KJS::CodeGenerator::beginSwitch):
        (KJS::prepareJumpTableForImmediateSwitch):
        (KJS::prepareJumpTableForCharacterSwitch):
        (KJS::prepareJumpTableForStringSwitch):
        (KJS::CodeGenerator::endSwitch):
        * VM/CodeGenerator.h:
        * VM/Machine.cpp:
        (KJS::offsetForStringSwitch):
        (KJS::Machine::privateExecute):
        * VM/Opcode.cpp:
        (KJS::):
        * VM/Opcode.h:
        * kjs/JSImmediate.h:
        * kjs/nodes.cpp:
        (KJS::):
        (KJS::processClauseList):