@@ -1,3 +1,15 @@
+2008-07-24  Oliver Hunt  <oliver@apple.com>
+
+        Reviewed by Alexey Proskuryakov.
+
+        Bug 20142: REGRESSION(r35245): /=/ weirdness
+        <https://bugs.webkit.org/show_bug.cgi?id=20142>
+
+        When adding all the meta data needed for exception error messages
+        I accidentally clobbered the handling of regex beginning with /=.
+
+        * kjs/grammar.y:
+
 2008-07-23  Alp Toker  <alp@nuanti.com>
 
         Build fix after r35293: Add API/ to the include path.
